--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,53 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --primary: #002430;
+    --primary-light: #013040;
+
+    --secundary: #FDF9F6;
+    --background-color: #fff;
+    --foreground-rgb: #e0e5e7;
+    --background-start-rgb: #e0e5e7;
+    --background-end-rgb: #e0e5e7;
+    --dark: #272727;
+    --white: #fff;
+    --darkLight: #3a3a3a;
+    /* --foreground-rgb: #e0e5e7; */
+    /* --background-start-rgb: 214, 219, 220; */
+    /* --background-end-rgb: 255, 255, 255; */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
+/* @media (prefers-color-scheme: dark) {
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    color: rgb(var(--foreground-rgb));
+    background-color: var(--background-color);
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
+}
+
+.btn{
+    background-color: var(--primary);
+    color: white;
+    padding: .5rem;
+    border-radius: .25rem;
+}
+
+.btn:hover{
+    background-color: var(--primary-light);
+}
+
+hr{
+    color: #fff;
+    opacity: .2;
 }
