--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,18 @@
 @tailwind utilities;
 
 :root {
-    --primary: #002430;
-    --primary-light: #013040;
+    /* --primary: #002430; */
+    /* --primary-light: #013040; */
+    --primary: #17171e;
+    --primary-light: #24242c;
 
-    --secundary: #FDF9F6;
-    --background-color: #fff;
+    --secondary: #FDF9F6;
+    --input-color: #393946;
     --foreground-rgb: #e0e5e7;
-    --background-start-rgb: #e0e5e7;
+    --background-start-rgb: #ebebeb;
     --background-end-rgb: #e0e5e7;
     --dark: #272727;
     --white: #fff;
-    --darkLight: #3a3a3a;
     /* --foreground-rgb: #e0e5e7; */
     /* --background-start-rgb: 214, 219, 220; */
     /* --background-end-rgb: 255, 255, 255; */
@@ -38,18 +39,40 @@ body {
     }
 }
 
-.btn{
+.btn {
     background-color: var(--primary);
     color: white;
     padding: .5rem;
     border-radius: .25rem;
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--primary-light);
 }
 
-hr{
+.sidebar-nav::-webkit-scrollbar {
+    width: 7px;
+}
+
+.sidebar-nav::-webkit-scrollbar-track {
+    background-color: var(--primary-light);
+    border-radius: 20px;
+    outline: 2px solid var(--primary-light);
+}
+
+.sidebar-nav::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
+    border-radius: 20px;
+}
+
+hr {
     color: #fff;
     opacity: .2;
+}
+
+@media (max-width: 640px) {
+    .sidebar-nav::-webkit-scrollbar {
+        display: none;
+    }
+    
 }
