--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,6 @@
     /* --primary-light: #013040; */
     --primary: #17171e;
     --primary-light: #24242c;
-
     --secondary: #FDF9F6;
     --input-color: #393946;
     --foreground-rgb: #e0e5e7;
@@ -15,6 +14,9 @@
     --background-end-rgb: #e0e5e7;
     --dark: #272727;
     --white: #fff;
+    --background-popup: #17171e81;
+    --denied: #ec6666;
+    --accept: #6ea76e;
     /* --foreground-rgb: #e0e5e7; */
     /* --background-start-rgb: 214, 219, 220; */
     /* --background-end-rgb: 255, 255, 255; */
@@ -33,6 +35,21 @@ body {
     background-color: var(--background-color);
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: var(--primary-light);
+    border-radius: 20px;
+    outline: 2px solid var(--primary-light);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
+    border-radius: 20px;
+}
+
 @layer utilities {
     .text-balance {
         text-wrap: balance;
@@ -48,6 +65,21 @@ body {
 
 .btn:hover {
     background-color: var(--primary-light);
+}
+
+.scroll::-webkit-scrollbar {
+    width: 7px;
+}
+
+.scroll::-webkit-scrollbar-track {
+    background-color: var(--primary-light);
+    border-radius: 20px;
+    outline: 2px solid var(--primary-light);
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    background-color: var(--primary);
+    border-radius: 20px;
 }
 
 .sidebar-nav::-webkit-scrollbar {
