--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
     --white: #fff;
     --background-popup: #17171e81;
     --denied: #ec6666;
-    --accept: #6ea76e;
+    --accept: #74d674;
     /* --foreground-rgb: #e0e5e7; */
     /* --background-start-rgb: 214, 219, 220; */
     /* --background-end-rgb: 255, 255, 255; */
@@ -108,3 +108,41 @@ hr {
     }
     
 }
+
+.fade-in-out-down{
+    position: absolute;
+    
+    top: 2.5rem;
+    color: var(--accept);
+    width: 350px;
+    height: 80px;
+    background-color: var(--primary-light);
+    border-radius: .5rem;
+    animation: fadeInDown .5s ease-in-out forwards,
+    fadeOutDown 1s ease-in-out 1.5s forwards;
+}
+
+@keyframes fadeInDown {
+    from {
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOutDown {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+
+
