--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,8 @@
     --primary: #17171e;
     --primary-light: #24242c;
     --secondary: #FDF9F6;
+    --third: #fc8b5d;
+    --third-light: #fc7844;
     --input-color: #393946;
     --foreground-rgb: #e0e5e7;
     --background-start-rgb: #ebebeb;
