--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
     --white: #fff;
     --background-popup: #17171e81;
     --denied: #ec6666;
+    --denied-dark: #ca5757;
     --accept: #74d674;
     /* --foreground-rgb: #e0e5e7; */
     /* --background-start-rgb: 214, 219, 220; */
